made productions ready